Add kaniko cache config

--- a/.buildkite/pipeline.yaml
+++ b/.buildkite/pipeline.yaml
@@ -10,5 +10,8 @@ steps:
             - --destination=embarkstudios/wireguard-ui
             - --context=dir://$PWD
             - --reproducible
+            - --cache=true
+            - --cache-repo=kaniko-cache.buildkite.svc.cluster.local/kaniko/cache
+            - --cache-dir=$BUILDKITE_BUILD_PATH/_kaniko_cache
           mount-secret:
             - docker-hub-credentials:/kaniko/.docker
