--- a/ui/package.json
+++ b/ui/package.json
@@ -20,6 +20,7 @@
         "@babel/preset-env": "^7.6.2",
         "@material/typography": "^3.1.0",
         "@smui/button": "^1.0.0-beta.16",
+        "@smui/fab": "^1.0.0-beta.16",
         "@smui/top-app-bar": "^1.0.0-beta.16",
         "babel-jest": "^24.9.0",
         "babel-loader": "^8.0.6",
