Set image format to docker so it works with docker pull

--- a/.buildkite/pipeline.yaml
+++ b/.buildkite/pipeline.yaml
@@ -4,7 +4,7 @@ steps:
       queue: default
       os: linux
     commands:
-      - buildah bud --layers -t embarkstudios/wireguard-ui:latest -f Dockerfile .
-      - buildah bud --layers -t embarkstudios/wireguard-ui:debug -f Dockerfile.debug .
+      - buildah bud --format=docker --layers -t embarkstudios/wireguard-ui:latest -f Dockerfile .
+      - buildah bud --format=docker --layers -t embarkstudios/wireguard-ui:debug -f Dockerfile.debug .
       - buildah push --authfile /root/.dockerhub/config.json embarkstudios/wireguard-ui:latest
       - buildah push --authfile /root/.dockerhub/config.json embarkstudios/wireguard-ui:debug
