--- a/ui/package.json
+++ b/ui/package.json
@@ -1,7 +1,7 @@
 {
     "name": "wireguard-ui",
     "version": "1.0.0",
-    "description": "Wireguard VPN web UI",
+    "description": "WireGuard VPN web UI",
     "main": "index.js",
     "scripts": {
         "dev": "webpack-dev-server --mode=development --open --port 5000",
