--- a/.buildkite/pipeline.yaml
+++ b/.buildkite/pipeline.yaml
@@ -5,13 +5,13 @@ steps:
       os: linux
     commands:
       - ./build.sh
-      - buildah push --authfile /root/.dockerhub/config.json embarkstudios/wireguard-ui:latest
+      - buildah push --format=v2s2 --authfile /root/.dockerhub/config.json embarkstudios/wireguard-ui:latest
       - tar czf wireguard-ui-linux-amd64-latest.tar.gz ./wireguard-ui
       - buildkite-agent artifact upload wireguard-ui-linux-amd64-latest.tar.gz
-  - name: Build debug  container image
+  - name: Build debug container image
     agents:
       queue: default
       os: linux
     commands:
       - buildah bud --format=docker --layers -t embarkstudios/wireguard-ui:debug -f Dockerfile.debug .
-      - buildah push --authfile /root/.dockerhub/config.json embarkstudios/wireguard-ui:debug
+      - buildah push --format=v2s2 --authfile /root/.dockerhub/config.json embarkstudios/wireguard-ui:debug
