--- a/.buildkite/pipeline.yaml
+++ b/.buildkite/pipeline.yaml
@@ -1,17 +1,18 @@
 steps:
   - name: Build container image
+    branches: "!master"
     agents:
       queue: default
       os: linux
     commands:
       - ./build.sh
-  - wait
-  - name: Push container image
+  - name: Build & push container image
     branches: "master"
     agents:
       queue: default
       os: linux
     commands:
+      - ./build.sh
       - buildah push --format=v2s2 --authfile /root/.dockerhub/config.json embarkstudios/wireguard-ui:latest
       - tar czf wireguard-ui-linux-amd64-latest.tar.gz ./wireguard-ui
       - buildkite-agent artifact upload wireguard-ui-linux-amd64-latest.tar.gz
