--- a/.buildkite/pipeline.yaml
+++ b/.buildkite/pipeline.yaml
@@ -5,14 +5,14 @@ steps:
       queue: default
       os: linux
     commands:
-      - ./build.sh
+      - buildah bud --format=docker --layers -f Dockerfile . 
   - name: Build & push container image
     branches: "master"
     agents:
       queue: default
       os: linux
     commands:
-      - ./build.sh
+      - buildah bud --format=docker --layers -t embarkstudios/wireguard-ui:latest -f Dockerfile .
       - buildah push --format=v2s2 --authfile /root/.dockerhub/config.json embarkstudios/wireguard-ui:latest
       - tar czf wireguard-ui-linux-amd64-latest.tar.gz ./wireguard-ui
       - buildkite-agent artifact upload wireguard-ui-linux-amd64-latest.tar.gz
