--- a/.github/workflows/push_master.yaml
+++ b/.github/workflows/push_master.yaml
@@ -10,10 +10,11 @@ jobs:
     - uses: actions/checkout@v1
     - name: Install buildah
       run: |
-        sudo apt-get update -qq
         sudo apt-get install -qq -y software-properties-common
         sudo add-apt-repository -y ppa:projectatomic/ppa
         sudo apt-get update -qq
         sudo apt-get -qq -y install buildah
-    - name: Build the Docker image
-      run: buildah bud --format=docker --layers -t embarkstudios/wireguard-ui:latest -f Dockerfile .
+    - name: Build & push the Docker image
+      run: |
+        buildah bud --format=docker --layers -t docker.pkg.github.com/embarkstudios/wireguard-ui:latest -t docker.pkg.github.com/embarkstudios/wireguard-ui:${GITHUB_SHA} -f Dockerfile .
+        buildah push --creds embarkbot:${{ secrets.GITHUB_TOKEN }} --format=v2s2 docker.pkg.github.com/embarkstudios/wireguard-ui
