--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -2,6 +2,9 @@ name: Go
 on: 
   push:
     branches-ignore: master
+  pull_request:
+    branches:
+      - master
 jobs:
   review:
     name: Review code
