--- a/.github/workflows/push_master.yaml
+++ b/.github/workflows/push_master.yaml
@@ -16,5 +16,5 @@ jobs:
         sudo apt-get -qq -y install buildah
     - name: Build & push the Docker image
       run: |
-        buildah bud --format=docker --layers -t docker.pkg.github.com/embarkstudios/wireguard-ui/wireguard-ui:latest -t docker.pkg.github.com/embarkstudios/wireguard-ui/wireguard-ui:${GITHUB_SHA} -f Dockerfile .
-        buildah push --creds embarkbot:${{ secrets.GITHUB_TOKEN }} --format=v2s2 docker.pkg.github.com/embarkstudios/wireguard-ui/wireguard-ui
+        buildah bud --format=docker --layers -t embarkstudios/wireguard-ui:latest -t embarkstudios/wireguard-ui:${GITHUB_SHA} -f Dockerfile .
+        buildah push --creds ${{ secrets.DOCKER_USERNAME }}:${{ secrets.DOCKER_PASSWORD }} --format=v2s2 embarkstudios/wireguard-ui
