--- a/.github/workflows/push_master.yaml
+++ b/.github/workflows/push_master.yaml
@@ -15,7 +15,9 @@ jobs:
         sudo apt-get update -qq
         sudo apt-get -qq -y install buildah
     - name: Build & push the Docker image
+      env:
+        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
         buildah bud --format=docker --layers -t embarkstudios/wireguard-ui:latest -t embarkstudios/wireguard-ui:${GITHUB_SHA} -f Dockerfile .
-        buildah push --creds ${{ secrets.DOCKER_USERNAME }}:${{ secrets.DOCKER_PASSWORD }} --format=v2s2 embarkstudios/wireguard-ui:latest
-        buildah push --creds ${{ secrets.DOCKER_USERNAME }}:${{ secrets.DOCKER_PASSWORD }} --format=v2s2 embarkstudios/wireguard-ui:${GITHUB_SHA}
+        buildah push --creds $DOCKER_USERNAME:$DOCKER_PASSWORD --format=v2s2 embarkstudios/wireguard-ui
