Removing swap and cleaning up apt cache.

--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -39,6 +39,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
+    - name: free disk space
+      run: |
+        sudo swapoff -a
+        sudo rm -f /swapfile
+        sudo apt clean
+        #docker rmi $(docker image ls -aq)
+        df -h
     - name: Install buildah
       run: |
         sudo apt-get install -qq -y software-properties-common
