--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -31,7 +31,7 @@ jobs:
       uses: "cedrickring/golang-action@1.4.1"
       with:
         args: go vet ./...
-    - name: Check missing error check
+    - name: Check security issues with gosec
       uses: "cedrickring/golang-action@1.4.1"
       with:
         args: go get github.com/securego/gosec/cmd/gosec; gosec ./... # https://github.com/securego/gosec
