--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -45,6 +45,7 @@ jobs:
         sudo rm -f /swapfile
         sudo apt clean
         #docker rmi $(docker image ls -aq)
+        docker image ls -aq
         df -h
     - name: Install buildah
       run: |
