--- a/.github/workflows/push_master.yaml
+++ b/.github/workflows/push_master.yaml
@@ -14,6 +14,13 @@ jobs:
         sudo add-apt-repository -y ppa:projectatomic/ppa
         sudo apt-get update -qq
         sudo apt-get -qq -y install buildah
+    - name: free disk space
+      run: |
+        sudo swapoff -a
+        sudo rm -f /swapfile
+        sudo apt clean
+        docker rmi $(docker image ls -aq)
+        df -h
     - name: Build & push the Docker image
       env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
