--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -11,14 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-#    - name: bindfs
-#      uses: "cedrickring/golang-action@1.4.1"
-#      with:
-#        args: go get -u github.com/go-bindata/go-bindata/... && go get -u github.com/elazarl/go-bindata-assetfs/... && go-bindata-assetfs -prefix ui/dist ui/dist
+    - name: bindfs
+      uses: "cedrickring/golang-action@1.4.1"
+      with:
+        args: go get -u github.com/go-bindata/go-bindata/... && go get -u github.com/elazarl/go-bindata-assetfs/... && go-bindata-assetfs -prefix ui/dist ui/dist
     - name: Check styling error
       uses: "cedrickring/golang-action@1.4.1"
       with:
-        args: go get -u golang.org/x/lint/golint; golint -set_exit_status main.go server.go config.go # ./... update to use package when https://github.com/go-bindata/go-bindata/pull/37 is merged
+        args: go get -u golang.org/x/lint/golint; golint -set_exit_status ./...
     - name: Check missing error check
       uses: "cedrickring/golang-action@1.4.1"
       with:
