--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -11,14 +11,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
+    - name: Use Node.js
+      uses: actions/setup-node@v1
+      with:
+        node-version: '12.x'
+    - name: npm installdependencies
+      run: npm install
+    - name: npm run build
+      run: npm run build
+    - name: bindfs
+      uses: "cedrickring/golang-action@1.4.1"
+      with:
+        args: go get -u github.com/go-bindata/go-bindata/... && go get -u github.com/elazarl/go-bindata-assetfs/... && go-bindata-assetfs -prefix ui/dist ui/dist
     - name: Check styling error
       uses: "cedrickring/golang-action@1.4.1"
       with:
         args: go get -u golang.org/x/lint/golint; golint -set_exit_status ./...
-   # - name: Check missing error check
-   #   uses: "cedrickring/golang-action@1.4.1"
-   #   with:
-   #     args: go get -u github.com/kisielk/errcheck; errcheck ./...
+    - name: Check missing error check
+      uses: "cedrickring/golang-action@1.4.1"
+      with:
+        args: go get -u github.com/kisielk/errcheck; errcheck ./...
     - name: Check suspicious constructs (1)
       uses: "cedrickring/golang-action@1.4.1"
       with:
