--prefix on install deps

--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -16,7 +16,7 @@ jobs:
       with:
         node-version: '12.x'
     - name: npm install dependencies
-      run: npm install ui
+      run: npm install --prefix ui
     - name: npm run build
       run: npm run --prefix ui build
     - name: bindfs
