--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -26,7 +26,7 @@ jobs:
     - name: Check styling error
       uses: "cedrickring/golang-action@1.4.1"
       with:
-        args: go get -u golang.org/x/lint/golint; golint -set_exit_status ./...
+        args: go get -u golang.org/x/lint/golint; golint -set_exit_status main.go server.go config.go
     - name: Check missing error check
       uses: "cedrickring/golang-action@1.4.1"
       with:
