--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   review:
     name: Review code
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@master
 
@@ -55,17 +55,17 @@ jobs:
 
   build:
     name: Build code
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@master
 
     - name: Clean out old builds from disk
       run: |
-        sudo swapoff -a
-        sudo rm -f /swapfile
-        sudo apt clean
+        df -h / && df -h /mnt
+        sudo apt-get clean -qq
+        sudo apt-get autoclean -qq
         docker rmi $(docker image ls -aq)
-        df -h
+        df -h / && df -h /mnt
 
     - name: Install buildah
       run: |
