--- a/.github/workflows/push_master.yaml
+++ b/.github/workflows/push_master.yaml
@@ -6,22 +6,21 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v1
     - name: Install buildah
       run: |
         sudo apt-get install -qq -y software-properties-common
-        sudo add-apt-repository -y ppa:projectatomic/ppa
         sudo apt-get update -qq
         sudo apt-get -qq -y install buildah
     - name: Free disk space
       run: |
-        sudo swapoff -a
-        sudo rm -f /swapfile
-        sudo apt clean
+        df -h / && df -h /mnt
+        sudo apt-get clean -qq
+        sudo apt-get autoclean -qq
         docker rmi $(docker image ls -aq)
-        df -h
+        df -h / && df -h /mnt
     - name: Build & push the Docker image
       env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
@@ -34,7 +33,7 @@ jobs:
     name: Release
     needs: build
     if: startsWith(github.ref, 'refs/tags/')
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@master
 
@@ -107,7 +106,6 @@ jobs:
     - name: Install buildah
       run: |
         sudo apt-get install -qq -y software-properties-common
-        sudo add-apt-repository -y ppa:projectatomic/ppa
         sudo apt-get update -qq
         sudo apt-get -qq -y install buildah
     
